Add api model generation

--- a/workshop-mgt-rest/pom.xml
+++ b/workshop-mgt-rest/pom.xml
@@ -18,6 +18,9 @@
         <default.package>com.mendoz.workshop</default.package>
         <openapi.generator.maven.plugin>6.3.0</openapi.generator.maven.plugin>
         <maven.plugin.validation>verbose</maven.plugin.validation>
+        <jackson.databind>2.15.0</jackson.databind>
+        <jackson.databind.nullable>0.2.4</jackson.databind.nullable>
+        <swagger.annotations>2.2.11</swagger.annotations>
     </properties>
     <dependencies>
         <dependency>
@@ -53,17 +56,17 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.15.0</version>
+            <version>${jackson.databind}</version>
         </dependency>
         <dependency>
             <groupId>org.openapitools</groupId>
             <artifactId>jackson-databind-nullable</artifactId>
-            <version>0.2.4</version>
+            <version>${jackson.databind.nullable}</version>
         </dependency>
         <dependency>
             <groupId>io.swagger.core.v3</groupId>
             <artifactId>swagger-annotations</artifactId>
-            <version>2.2.11</version>
+            <version>${swagger.annotations}</version>
         </dependency>
     </dependencies>
 
