--- a/workshop-mgt-rest/pom.xml
+++ b/workshop-mgt-rest/pom.xml
@@ -21,6 +21,8 @@
         <jackson.databind>2.15.0</jackson.databind>
         <jackson.databind.nullable>0.2.4</jackson.databind.nullable>
         <swagger.annotations>2.2.11</swagger.annotations>
+        <jacoco.maven.plugin>0.8.7</jacoco.maven.plugin>
+        <jacoco.coverage.ratio>0.90</jacoco.coverage.ratio>
     </properties>
     <dependencies>
         <dependency>
@@ -103,15 +105,67 @@
                             <generateApis>false</generateApis>
                             <additionalProperties>serializableModel=true</additionalProperties>
                             <configOptions>
-                                <dateLibrary>java8-localdatetime</dateLibrary>
+                                <java8>true</java8>
                                 <interfaceOnly>true</interfaceOnly>
                                 <useSpringBoot3>true</useSpringBoot3>
+                                <delegatePattern>true</delegatePattern>
                                 <sortParamsByRequiredFlag>true</sortParamsByRequiredFlag>
                             </configOptions>
                         </configuration>
                     </execution>
                 </executions>
             </plugin>
+            <!-- Code coverage test plugin-->
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>${jacoco.maven.plugin}</version>
+                <configuration>
+                    <excludes>
+                        <exclude>**com/mendoz/workshop/App</exclude>
+                        <exclude>**com/mendoz/workshop/payload/**/*</exclude>
+                        <exclude>**com/mendoz/workshop/domain/**/*</exclude>
+                    </excludes>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>jacoco-report</id>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>target/jacoco-report</outputDirectory>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>jacoco-check</id>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                        <configuration>
+                            <rules>
+                                <rule>
+                                    <element>PACKAGE</element>
+                                    <limits>
+                                        <limit>
+                                            <counter>LINE</counter>
+                                            <value>COVEREDRATIO</value>
+                                            <minimum>${jacoco.coverage.ratio}</minimum>
+                                        </limit>
+                                    </limits>
+                                </rule>
+                            </rules>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
         </plugins>
     </build>
 
