--- a/workshop-mgt-rest/pom.xml
+++ b/workshop-mgt-rest/pom.xml
@@ -23,6 +23,7 @@
         <swagger.annotations>2.2.11</swagger.annotations>
         <jacoco.maven.plugin>0.8.7</jacoco.maven.plugin>
         <jacoco.coverage.ratio>0.90</jacoco.coverage.ratio>
+        <mockito.all>2.0.2-beta</mockito.all>
     </properties>
     <dependencies>
         <dependency>
@@ -55,6 +56,12 @@
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
             <version>${assertj.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>${mockito.all}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -141,7 +148,7 @@
                 <version>${jacoco.maven.plugin}</version>
                 <configuration>
                     <excludes>
-                        <exclude>**com/mendoz/workshop/App</exclude>
+                        <exclude>**com/mendoz/workshop/App.class</exclude>
                         <exclude>**com/mendoz/workshop/payload/**/*</exclude>
                         <exclude>**com/mendoz/workshop/domain/**/*</exclude>
                     </excludes>
